ui: ui interface for topology rules

--- a/statics/index.html
+++ b/statics/index.html
@@ -75,6 +75,11 @@
   <script src="/statics/js/components/alert-form.js"></script>
   <script src="/statics/js/components/alert-list.js"></script>
   <script src="/statics/js/components/status.js"></script>
+  <script src="/statics/js/components/topology-rules.js"></script>
+  <script src="/statics/js/components/noderule-list.js"></script>
+  <script src="/statics/js/components/noderule-form.js"></script>
+  <script src="/statics/js/components/edgerule-list.js"></script>
+  <script src="/statics/js/components/edgerule-form.js"></script>
 
   <!-- views -->
   <script src="/statics/js/components/login.js"></script>
